# schemaui

./: .autocorrectignore  .autocorrectrc  .gitignore  .pre-commit-config.yaml  .release-plz.toml  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.ZH.md  README.md  TODO-questions.md  refactor-design.md  report-composite.md  report-section.md  rust-toolchain.toml  rustfmt.toml  schema.json  structure_design.md  typos.toml
.github/workflow/: prek-checks.yaml  release-plz-pr.yml  release-plz-release.yml
.github/workflows/: cd.yml  prek-checks.yaml  release-plz-pr.yml  release-plz-release.yml
.serena/: project.yml
docs/: cli_usage.md  structure_design.md
docs/en/: cli_usage.md  redesign-latest.txt  structure_design.md
docs/zh/: cli_usage.zh.md  structure_design.md
examples/: config-schema.json  jsonattr.rs  schemars.rs
keymap/: default.keymap.json
schemaui-cli/: Cargo.toml  cli_usage.md
schemaui-cli/src/: main.rs
schemaui-cli/tests/: help.rs
src/: lib.rs  main.rs  runtime.rs  schema.rs  state.rs  ui.rs
src/app/: controller.rs  input.rs  keymap.rs  mod.rs  options.rs  popup.rs  runtime.rs  schema_ui.rs  terminal.rs  validation.rs
src/app/runtime/: list_ops.rs  mod.rs  overlay.rs
src/domain/: mod.rs  parser.rs  schema.rs
src/form/: actions.rs  array.rs  composite.rs  error.rs  field.rs  key_value.rs  mod.rs  reducers.rs  section.rs  state.rs
src/form/field/: convert.rs  mod.rs  value.rs
src/form/field/components/: array_buffer.rs  base.rs  bool.rs  composite.rs  composite_list.rs  enum_select.rs  helpers.rs  key_value.rs  mod.rs  multi_select.rs  scalar_array.rs  text.rs
src/form/field/state/: builder.rs  input.rs  lists.rs  mod.rs  value_ops.rs
src/io/: format.rs  input.rs  mod.rs  output.rs
src/presentation/: components.rs  mod.rs  view.rs
src/presentation/components/: body.rs  fields.rs  footer.rs  layout.rs  mod.rs  overlay.rs  popup.rs  sections.rs
src/runtime/: mod.rs
src/schema/: layout.rs  loader.rs  metadata.rs  mod.rs  resolver.rs
src/state/: mod.rs
src/tests/: mod.rs
src/tests/app/: input_tests.rs  mod.rs
src/tests/form/: component_collection_tests.rs  component_text_tests.rs  key_value_tests.rs  mod.rs  state_tests.rs
src/tests/presentation/: fields_tests.rs  mod.rs
src/tests/schema/: layout_tests.rs  resolver_tests.rs
src/ui/: mod.rs
tests/app/: input_tests.rs
tests/form/: component_collection_tests.rs  component_text_tests.rs  key_value_tests.rs  state_tests.rs
tests/presentation/: fields_tests.rs
tests/schema/: layout_tests.rs  resolver_tests.rs
