[package]
name = "schemaui-cli"
version = "0.1.1"
edition = "2024"
authors = ["unic <yuniqueunic@gmail.com>"]
description = "CLI wrapper for schemaui, rendering JSON Schemas as TUIs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yuniqueunic/schemaui"

[dependencies]
schemaui = { path = ".." }
serde_json = "1"
color-eyre = "0.6"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
